go back to swaggo, geeneral fixes
